recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:5: error: illegal start of simple expression
  else [
       ^PolygonFractal:7: error: ';' expected but ']' found.
  ]
  ^